Update for wiped

--- a/about-us.html
+++ b/about-us.html
@@ -97,7 +97,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./images/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -138,7 +138,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -152,7 +152,7 @@
 
                 <!-- CARD 2 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Deep Cleaning</span>
                         <a href="deep-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -166,7 +166,7 @@
 
                 <!-- CARD 3 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Recurring Clean</span>
                         <a href="recurring-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -180,7 +180,7 @@
 
                 <!-- CARD 4 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Move In/Out Clean</span>
                         <a href="move-in-out.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -194,7 +194,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -210,7 +210,7 @@
         </div>
     </div>
 
-    <section class="relative pt-36 pb-20 bg-cover bg-center" style="background-image: url('./images/about.jpg');">
+    <section class="relative pt-36 pb-20 bg-cover bg-center" style="background-image: url('./assets/hero/about.jpg');">
         <!-- Optional Overlay -->
         <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div> <!-- dark overlay, optional -->
         
@@ -238,68 +238,69 @@
     </section>
 
     <section class="relative py-20 bg-blue-50 font-poppins overflow-hidden">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 lg:grid-cols-2 items-center gap-12">
+        <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 lg:grid-cols-2 items-center gap-12">
 
-        <!-- IMAGES (LEFT SIDE) -->
-        <div class="relative order-1 flex justify-center">
-            <!-- Main Image -->
-            <div class="relative w-[90%] md:w-[80%]">
-                <img src="./images/h3-agency01.jpg"
-                    alt="WIPED Cleaning Main"
-                    class="rounded-3xl shadow-2xl w-full object-cover">
-            </div>
-
-            <!-- Overlapping Image (tilted right) -->
-            <div class="absolute -bottom-10 -right-8 w-[45%] hidden md:block transform rotate-6 hover:rotate-3 transition-transform duration-500">
-                <img src="./images/h3-agency02.jpg"
-                    alt="Team at Work"
-                    class="rounded-2xl shadow-xl border-4 border-white">
-            </div>
-        </div>
-
-        <!-- TEXT (RIGHT SIDE) -->
-        <div class="order-2">
-            <h2 class="text-4xl md:text-5xl font-semibold text-blue-700 mb-4">About WIPED Cleaning Services</h2>
-            <h3 class="text-2xl font-medium text-gray-800 mb-6">Welcome to WIPED Cleaning Services, where cleanliness meets care.</h3>
-            <p class="text-gray-600 leading-relaxed mb-8">
-                We are a locally owned and operated cleaning company based in Regina, Saskatchewan, dedicated to providing high-quality residential cleaning with a personal touch.
-                At <span class="font-semibold text-blue-700">WIPED</span>, we understand how valuable your time and comfort are. That’s why we make it our mission to deliver spotless results and reliable service you can always count on.
-                Whether it’s a deep clean, move-in/move-out, or regular maintenance, we ensure every corner of your home is cleaned to perfection.
-            </p>
-            <p class="text-gray-600 leading-relaxed mb-8">
-                Our team is fully trained, insured, and detail-oriented, treating every home as if it were our own. We take pride in using safe and effective products, professional tools, and proven techniques that leave your space refreshed, sanitized, and beautifully maintained.
-                We’re more than just a cleaning service — we’re your partner in creating a home that feels fresh, welcoming, and truly cared for.
-            </p>
-
-            <!-- FEATURES -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-10">
-                <div class="flex items-center gap-3">
-                    <span class="material-symbols-rounded text-blue-600 text-3xl">eco</span>
-                    <p class="text-gray-700 font-medium">Eco-Friendly Cleaning</p>
+            <!-- IMAGES (LEFT SIDE) -->
+            <div class="relative order-1 flex justify-center">
+                <!-- Main Image -->
+                <div class="relative w-[90%] md:w-[80%]">
+                    <img src="./assets/services/h3-agency01.jpg"
+                        alt="WIPED Cleaning Main"
+                        class="rounded-3xl shadow-2xl w-full object-cover">
                 </div>
-                <div class="flex items-center gap-3">
-                    <span class="material-symbols-rounded text-blue-600 text-3xl">home</span>
-                    <p class="text-gray-700 font-medium">Spotless Homes, Affordable Prices</p>
-                </div>
-                <div class="flex items-center gap-3">
-                    <span class="material-symbols-rounded text-blue-600 text-3xl">cleaning_services</span>
-                    <p class="text-gray-700 font-medium">Deep Cleaning, Personalized Service</p>
-                </div>
-                <div class="flex items-center gap-3">
-                    <span class="material-symbols-rounded text-blue-600 text-3xl">workspace_premium</span>
-                    <p class="text-gray-700 font-medium">Premium Home Cleaning</p>
+
+                <!-- Overlapping Image (tilted right) -->
+                <div class="absolute -bottom-10 -right-8 w-[45%] hidden md:block transform rotate-6 hover:rotate-3 transition-transform duration-500">
+                    <img src="./assets/services/h3-agency02.jpg"
+                        alt="Team at Work"
+                        class="rounded-2xl shadow-xl border-4 border-white">
                 </div>
             </div>
 
-            <!-- BUTTON WITH ARROW ICON -->
-            <button class="bg-blue-600 text-white px-8 py-3 rounded-full text-lg font-medium shadow-md 
-                    hover:bg-blue-700 hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+            <!-- TEXT (RIGHT SIDE) -->
+            <div class="order-2">
+                <h2 class="text-4xl md:text-5xl font-semibold text-blue-700 mb-4">About WIPED Cleaning Services</h2>
+                <h3 class="text-2xl font-medium text-gray-800 mb-6">Welcome to WIPED Cleaning Services, where cleanliness meets care.</h3>
+                <p class="text-gray-600 leading-relaxed mb-8">
+                    We are a locally owned and operated cleaning company based in Regina, Saskatchewan, dedicated to providing high-quality residential cleaning with a personal touch.
+                    At <span class="font-semibold text-blue-700">WIPED</span>, we understand how valuable your time and comfort are. That’s why we make it our mission to deliver spotless results and reliable service you can always count on.
+                    Whether it’s a deep clean, move-in/move-out, or regular maintenance, we ensure every corner of your home is cleaned to perfection.
+                </p>
+                <p class="text-gray-600 leading-relaxed mb-8">
+                    Our team is fully trained, insured, and detail-oriented, treating every home as if it were our own. We take pride in using safe and effective products, professional tools, and proven techniques that leave your space refreshed, sanitized, and beautifully maintained.
+                    We’re more than just a cleaning service — we’re your partner in creating a home that feels fresh, welcoming, and truly cared for.
+                </p>
+
+                <!-- FEATURES -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-10">
+                    <div class="flex items-center gap-3">
+                        <span class="material-symbols-rounded text-blue-600 text-3xl">eco</span>
+                        <p class="text-gray-700 font-medium">Eco-Friendly Cleaning</p>
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <span class="material-symbols-rounded text-blue-600 text-3xl">home</span>
+                        <p class="text-gray-700 font-medium">Spotless Homes, Affordable Prices</p>
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <span class="material-symbols-rounded text-blue-600 text-3xl">cleaning_services</span>
+                        <p class="text-gray-700 font-medium">Deep Cleaning, Personalized Service</p>
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <span class="material-symbols-rounded text-blue-600 text-3xl">workspace_premium</span>
+                        <p class="text-gray-700 font-medium">Premium Home Cleaning</p>
+                    </div>
+                </div>
+
+                <!-- BOOK A SERVICE BUTTON WITH LINK -->
+                <a href="contact.html"
+                class="inline-flex items-center gap-2 bg-blue-600 text-white px-8 py-3 rounded-full text-lg font-medium shadow-md 
+                        hover:bg-blue-700 hover:shadow-lg transition-all duration-300">
                 Book A Service
                 <span class="material-symbols-rounded text-2xl">arrow_forward</span>
-            </button>
+                </a>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <section class="py-20 bg-blue-50 font-poppins">
         <div class="max-w-5xl mx-auto px-6 text-center">
@@ -425,11 +426,12 @@
         <!-- Buttons -->
         <div class="flex flex-col sm:flex-row items-center justify-center md:justify-start space-y-4 sm:space-y-0 sm:space-x-4">
 
-            <!-- Book Now Button -->
-            <button class="bg-white text-sky-600 font-semibold px-6 py-3 rounded-full shadow-md flex items-center space-x-2 hover:bg-sky-50 transition">
+            <a href="contact.html"
+                class="inline-flex items-center space-x-2 bg-white text-sky-600 font-semibold px-6 py-3 rounded-full shadow-md 
+                        hover:bg-sky-50 transition">
                 <span>Book Now</span>
                 <span class="text-xl">→</span>
-            </button>
+            </a>
 
             <a href="tel:+16393821688" class="flex items-center space-x-2 bg-white/30 hover:bg-white/50 transition px-4 py-2 rounded-full">
                 <div class="p-2 rounded-full bg-white/20">
@@ -442,7 +444,6 @@
                     <p class="font-bold">+1 (639) 382-1688</p>
                 </div>
             </a>
-
         </div>
 
         <!-- Stats Section -->
@@ -477,7 +478,7 @@
         <div class="relative flex flex-col lg:flex-row lg:space-x-10 space-y-10 lg:space-y-0">
             <!-- Step 1 -->
             <div class="relative bg-white rounded-2xl shadow-lg overflow-hidden transform lg:-rotate-2 hover:rotate-0 transition-all duration-300 lg:translate-y-0">
-                <div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c');"></div>
+                <div class="h-56 bg-cover bg-center" style="background-image: url('./assets/services/details.jpg');"></div>
                 <div class="p-6 text-left">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-2">Provide the details</h3>
                     <p class="text-gray-600">Fill out a quick form with details about your space, schedule, and preferences.</p>
@@ -486,7 +487,7 @@
 
             <!-- Step 2 -->
             <div class="relative bg-white rounded-2xl shadow-lg overflow-hidden transform lg:translate-y-8 hover:-translate-y-1 transition-all duration-300">
-            <div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1600585152930-1d4fd4f3a2b0');"></div>
+            <div class="h-56 bg-cover bg-center" style="background-image: url('./assets/services/plan.jpg');"></div>
             <div class="p-6 text-left">
                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">Pick a suitable plan</h3>
                 <p class="text-gray-600">We’ll send you a personalized estimate, no hidden fees, no upselling.</p>
@@ -495,7 +496,7 @@
 
             <!-- Step 3 -->
             <div class="relative bg-white rounded-2xl shadow-lg overflow-hidden transform lg:-translate-y-8 hover:-translate-y-1 transition-all duration-300">
-            <div class="h-56 bg-cover bg-center" style="background-image: url('./images/house-cleaned.jpg');"></div>
+            <div class="h-56 bg-cover bg-center" style="background-image: url('./assets/services/house-cleaned.jpg');"></div>
             <div class="p-6 text-left">
                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">We house cleaned</h3>
                 <p class="text-gray-600">Our team arrives on time, equipped, and ready to clean thoroughly.</p>
@@ -504,7 +505,7 @@
 
             <!-- Step 4 -->
             <div class="relative bg-white rounded-2xl shadow-lg overflow-hidden transform lg:translate-y-16 hover:-translate-y-1 transition-all duration-300">
-            <div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1598300186833-1eaf4fddf3da');"></div>
+            <div class="h-56 bg-cover bg-center" style="background-image: url('./assets/services/enjoy.jpg');"></div>
             <div class="p-6 text-left">
                 <h3 class="text-2xl font-semibold text-gray-800 mb-2">You enjoy & relax</h3>
                 <p class="text-gray-600">Enjoy a spotless home or workspace that looks, feels, and smells truly clean.</p>
@@ -760,7 +761,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./images/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
