--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./images/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -137,7 +137,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -151,7 +151,7 @@
 
                 <!-- CARD 2 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Deep Cleaning</span>
                         <a href="deep-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -165,7 +165,7 @@
 
                 <!-- CARD 3 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Recurring Clean</span>
                         <a href="recurring-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -179,7 +179,7 @@
 
                 <!-- CARD 4 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Move In/Out Clean</span>
                         <a href="move-in-out.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -193,7 +193,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -212,7 +212,7 @@
     <section class="relative h-screen overflow-hidden">
         <!-- Background Video -->
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
-            <source src="./video/clean-bg.mp4" type="video/mp4">
+            <source src="./assets/video/clean-bg.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>  
 
@@ -270,7 +270,7 @@
             <!-- CARD TEMPLATE -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/care-clean.webp');"></div>
+                    style="background-image: url('./assets/services/care-clean.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Care Clean</h3>
@@ -285,7 +285,7 @@
             <!-- CARD 2 -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/deep-clean.jpg');"></div>
+                    style="background-image: url('./assets/services/deep-clean.jpg');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Deep Clean</h3>
@@ -300,7 +300,7 @@
             <!-- CARD 3 -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/recurring-clean.webp');"></div>
+                    style="background-image: url('./assets/services/recurring-clean.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Recurring Clean</h3>
@@ -318,7 +318,7 @@
             <!-- CARD 4 -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/move-in-out-clean.webp');"></div>
+                    style="background-image: url('./assets/services/move-in-out-clean.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Move-In/Out Clean</h3>
@@ -333,7 +333,7 @@
             <!-- CARD 5 -->
             <div class="group relative overflow-hidden rounded-2xl border border-white/30 backdrop-blur-sm bg-white/10 shadow-2xl hover:shadow-blue-500/30 transition-all duration-500 cursor-pointer h-96">
                 <div class="absolute inset-0 bg-cover bg-center transition-transform duration-700 group-hover:scale-105"
-                    style="background-image: url('./images/post-construction-clean.webp');"></div>
+                    style="background-image: url('./assets/services/post-construction-clean.webp');"></div>
                 <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/40 to-transparent"></div>
                 <div class="absolute bottom-8 left-8 right-8 text-white">
                     <h3 class="text-2xl font-semibold mb-2 drop-shadow-lg">Post Construction Clean</h3>
@@ -348,7 +348,7 @@
     </section>
 
     <section class="relative bg-gradient-to-b from-blue-950 via-blue-900 to-blue-800 text-white py-32 px-6 flex items-center justify-center bg-cover bg-center"
-        style="background-image: url('./images/cleaning-bg.jpg');">
+        style="background-image: url('./assets/services/cleaning-bg.jpg');">
         
         <!-- Overlay -->
         <div class="absolute inset-0 bg-blue-950/70 backdrop-blur-[2px]"></div>
@@ -398,7 +398,7 @@
             <p class="text-gray-600 text-lg max-w-md mx-auto lg:mx-0">
             You have questions — we have answers! Learn more about our cleaning services, scheduling, and satisfaction guarantee.
             </p>
-            <img src="./images/faq.png" alt="FAQ" class="rounded-2xl mb-8 lg:mb-12 w-full h-auto object-cover">
+            <img src="./assets/services/faq.png" alt="FAQ" class="rounded-2xl mb-8 lg:mb-12 w-full h-auto object-cover">
         </div>
 
         <!-- RIGHT SIDE: FAQ ITEMS -->
@@ -707,7 +707,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./images/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
