--- a/deep-clean.html
+++ b/deep-clean.html
@@ -96,7 +96,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./images/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -137,7 +137,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -151,7 +151,7 @@
 
                 <!-- CARD 2 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Deep Cleaning</span>
                         <a href="deep-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -165,7 +165,7 @@
 
                 <!-- CARD 3 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Recurring Clean</span>
                         <a href="recurring-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -179,7 +179,7 @@
 
                 <!-- CARD 4 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Move In/Out Clean</span>
                         <a href="move-in-out.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -193,7 +193,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -212,7 +212,7 @@
     <section class="relative pt-36 pb-20">
         <!-- Background Image with Overlay -->
         <div class="absolute inset-0">
-            <img src="./images/deep.jpg" alt="Deep Clean Banner" class="w-full h-full object-cover">
+            <img src="./assets/hero/deep.jpg" alt="Deep Clean Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div>
         </div>
 
@@ -272,7 +272,7 @@
     <section class="relative bg-blue-600 text-white py-20 px-6">
         <!-- Background Image with Opacity -->
         <div class="absolute inset-0">
-            <img src="./images/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
+            <img src="./assets/banner/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600/50"></div> <!-- Tailwind 3+ shorthand for opacity -->
         </div>
 
@@ -344,14 +344,14 @@
                     </p>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="./images/deep-cleaning-services.jpg" alt="Deep Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./assets/services/deep-cleaning-services.jpg" alt="Deep Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
             </div>
 
             <!-- SECTION 2: IMAGE LEFT, TEXT RIGHT -->
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                    <img src="./images/booking-deep-clean.jpg" alt="Booking Deep Clean" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./assets/services/booking-deep-clean.jpg" alt="Booking Deep Clean" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
                 <div class="md:w-1/2 space-y-6">
                     <p class="text-gray-700 text-lg md:text-xl">
@@ -395,7 +395,7 @@
                     </ul>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="./images/guaranteed-clean.jpg" alt="Guaranteed Deep Clean" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./assets/services/guaranteed-clean.jpg" alt="Guaranteed Deep Clean" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
             </div>
         </div>
@@ -463,7 +463,7 @@
     <section class="relative bg-blue-600 text-white py-20 px-6">
         <!-- Background Image with Opacity -->
         <div class="absolute inset-0">
-            <img src="./images/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
+            <img src="./assets/banner/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600/50"></div> <!-- Tailwind 3+ shorthand for opacity -->
         </div>
 
@@ -629,7 +629,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./images/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
