--- a/move-in-out.html
+++ b/move-in-out.html
@@ -97,7 +97,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./images/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -138,7 +138,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -152,7 +152,7 @@
 
                 <!-- CARD 2 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Deep Cleaning</span>
                         <a href="deep-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -166,7 +166,7 @@
 
                 <!-- CARD 3 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Recurring Clean</span>
                         <a href="recurring-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -180,7 +180,7 @@
 
                 <!-- CARD 4 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Move In/Out Clean</span>
                         <a href="move-in-out.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -194,7 +194,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -213,7 +213,7 @@
     <section class="relative pt-36 pb-20">
         <!-- Background Image with Overlay -->
         <div class="absolute inset-0">
-            <img src="./images/move.jpg" alt="Move In/Out Clean Banner" class="w-full h-full object-cover">
+            <img src="./assets/hero/move.jpg" alt="Move In/Out Clean Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div>
         </div>
 
@@ -243,7 +243,7 @@
             
             <!-- LEFT SIDE: IMAGE -->
             <div class="md:w-1/2">
-                <img src="./images/move-clean.jpg" alt="Move-In/Move-Out Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                <img src="./assets/services/move-clean.jpg" alt="Move-In/Move-Out Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
             </div>
 
             <!-- RIGHT SIDE: TEXT -->
@@ -387,7 +387,7 @@
                 </div>
 
                 <div class="md:w-1/2">
-                    <img src="./images/move-cleaning.jpg" alt="Move-In / Move-Out Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./assets/services/move-cleaning.jpg" alt="Move-In / Move-Out Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
             </div>
         </div>
@@ -433,7 +433,7 @@
     <section class="relative bg-blue-600 text-white py-20 px-6">
         <!-- Background Image with Opacity -->
         <div class="absolute inset-0">
-            <img src="./images/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
+            <img src="./assets/banner/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600/50"></div> <!-- Tailwind 3+ shorthand for opacity -->
         </div>
 
@@ -549,7 +549,7 @@
     <section class="relative bg-blue-600 text-white py-20 px-6">
         <!-- Background Image with Opacity -->
         <div class="absolute inset-0">
-            <img src="./images/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
+            <img src="./assets/banner/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600/50"></div> <!-- Tailwind 3+ shorthand for opacity -->
         </div>
 
@@ -759,7 +759,7 @@
 
         <!-- Right Side: Image -->
         <div class="flex justify-center md:justify-end">
-        <img src="./images/cant-clean.png" alt="Cleaning Equipment" class="rounded-xl  w-full max-w-md object-cover">
+        <img src="./assets/services/cant-clean.png" alt="Cleaning Equipment" class="rounded-xl  w-full max-w-md object-cover">
         </div>
 
         </div>
@@ -773,7 +773,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./images/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
