--- a/post-construction.html
+++ b/post-construction.html
@@ -97,7 +97,7 @@
 
             <!-- CENTER: LOGO -->
             <a href="index.html" class="flex items-center space-x-2 transition-all duration-500">
-                <img id="mainLogo" src="./images/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
+                <img id="mainLogo" src="./assets/logo/wiped-logo.png" alt="Wiped Logo" class="h-20 w-auto object-contain transition-all duration-500">
             </a>
 
             <!-- RIGHT: BOOK NOW BUTTON -->
@@ -114,13 +114,13 @@
     </header>
 
     <!-- OVERLAY MENU -->
-<div id="menuOverlay" class="fixed inset-0 bg-blue-950 text-white flex flex-col items-center justify-start z-[9999] overflow-y-auto hidden">
-    <!-- CLOSE BUTTON -->
-    <button id="closeMenu" class="absolute top-6 right-8 text-white hover:text-blue-400">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
-        </svg>
-    </button>
+    <div id="menuOverlay" class="fixed inset-0 bg-blue-950 text-white flex flex-col items-center justify-start opacity-0 pointer-events-none transition-opacity duration-200 z-[9999] overflow-y-auto">
+        <!-- CLOSE BUTTON -->
+        <button id="closeMenu" class="absolute top-6 right-8 text-white hover:text-blue-400 transition">
+            <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+            </svg>
+        </button>
 
         <!-- NAVIGATION LINKS -->
         <nav class="flex flex-wrap justify-center gap-12 text-3xl font-semibold tracking-wide mb-20 mt-8">
@@ -138,7 +138,7 @@
 
                 <!-- CARD 1 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/care-clean.webp" alt="Care Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Care Clean</span>
                         <a href="care-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -152,7 +152,7 @@
 
                 <!-- CARD 2 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/deep-clean.jpg" alt="Deep Cleaning" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Deep Cleaning</span>
                         <a href="deep-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -166,7 +166,7 @@
 
                 <!-- CARD 3 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/recurring-clean.webp" alt="Recurring Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Recurring Clean</span>
                         <a href="recurring-clean.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -180,7 +180,7 @@
 
                 <!-- CARD 4 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/move-in-out-clean.webp" alt="Move In/Out Clean" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Move In/Out Clean</span>
                         <a href="move-in-out.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -194,7 +194,7 @@
 
                 <!-- CARD 5 -->
                 <div class="relative w-56 h-72 rounded-2xl overflow-hidden group shadow-lg hover:shadow-2xl transition-transform duration-500 hover:-translate-y-2 hover:scale-[1.02]">
-                    <img src="./images/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post Construction" class="absolute inset-0 w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent flex flex-col justify-end items-center text-center p-6">
                         <span class="text-2xl font-semibold mb-4">Post Construction</span>
                         <a href="post-construction.html" class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium hover:bg-blue-500 transition flex items-center gap-2">
@@ -213,7 +213,7 @@
     <section class="relative pt-36 pb-20">
         <!-- Background Image with Overlay -->
         <div class="absolute inset-0">
-            <img src="./images/post.jpeg" alt="Post Construction Clean Banner" class="w-full h-full object-cover">
+            <img src="./assets/hero/post.jpeg" alt="Post Construction Clean Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600 bg-opacity-50"></div>
         </div>
 
@@ -243,7 +243,7 @@
             
             <!-- LEFT SIDE: IMAGE -->
             <div class="md:w-1/2">
-                <img src="./images/post-construction.jpg" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                <img src="./assets/services/post-construction.jpg" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
             </div>
 
             <!-- RIGHT SIDE: TEXT -->
@@ -391,7 +391,7 @@
                     </p>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="./images/post-construction-clean.webp" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
+                    <img src="./assets/services/post-construction-clean.webp" alt="Post-Construction Cleaning Service" class="w-full rounded-3xl shadow-lg object-cover">
                 </div>
             </div>
         </div>
@@ -400,7 +400,7 @@
     <section class="relative bg-blue-600 text-white py-20 px-6">
         <!-- Background Image with Opacity -->
         <div class="absolute inset-0">
-            <img src="./images/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
+            <img src="./assets/banner/cleaning-banner.jpg" alt="Cleaning Banner" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-blue-600/50"></div> <!-- Tailwind 3+ shorthand for opacity -->
         </div>
 
@@ -423,7 +423,7 @@
     <!-- POST-CONSTRUCTION CLEANING BANNER -->
     <section class="bg-white text-gray-800 py-24 px-6 md:px-16 lg:px-24">
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-4xl md:text-5xl font-extrabold mb-6">
+            <h2 class="text-4xl md:text-5xl text-blue-700 font-bold mb-6">
                 Still Have Questions About Post-Construction Cleaning?
             </h2>
             <p class="text-lg md:text-xl mb-4">
@@ -548,7 +548,7 @@
             <div class="text-center sm:text-left flex flex-col items-center sm:items-start">
                 <!-- LOGO -->
                 <img 
-                    src="./images/wiped-logo.png" 
+                    src="./assets/logo/wiped-logo.png" 
                     alt="Cleaning Service Icon" 
                     class="w-36 h-20 mb-5 object-contain"
                 />
