Update for wiped

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts | WIPED</title>
-    <link rel="icon" href="./images/wiped-logo.png" type="image/webp">
+    <link rel="icon" href="./assets/logo/wiped-logo.png" type="image/webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Material Symbols Outlined -->
